--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Wereld</h1>
+<h1>Hallo Wereld</h1>
 <p>Ik word gehost door GitHub Pages.</p>
 </body>
 </html>
